# egui-pixels

./: .gitignore  Cargo.toml  README.md  Trunk.toml  config.json  flake.nix  masks.csv
.cargo/: config.toml
.devcontainer/: devcontainer.json
.zed/: settings.json
annotation-tool/: Cargo.toml  README.md  Trunk.toml  index.html  styles.css
annotation-tool/src/: app.rs  config.rs  lib.rs  storage.rs
annotation-tool/src/app/: image_selector.rs  image_state.rs  mask_generator.rs  menu.rs  mod.rs  native.rs  web.rs
annotation-tool/src/app/tools/: clear.rs  mod.rs
annotation-tool/src/app/tools/sam/: inference.rs  mod.rs  native_ort.rs
annotation-tool/src/storage/: file.rs  in_memory.rs  mod.rs
annotation_tool/: .gitignore  Cargo.toml  index.html
annotation_tool/src/: async_task.rs  lib.rs  main.rs
annotation_tool/src/app/: config.rs  image_selector.rs  mask_generator.rs  menu.rs  mod.rs  viewer.rs
annotation_tool/src/app/tools/: mod.rs
annotation_tool/src/app/tools/sam/: native_ort.rs
annotation_tool/src/mask/: mod.rs
egui-pixels/: Cargo.toml  README.md
egui-pixels/src/: async_task.rs  cursor_image.rs  ffi.rs  image_state.rs  image_utils.rs  lib.rs  mask.rs  pixel_range.rs  state.rs  sub_group.rs  tools.rs  viewer.rs
egui-pixels/src/image_utils/: image.rs
egui-pixels/src/mask/: flat_map_inplace.rs  history.rs  merge_sorted.rs  mod.rs
egui-pixels/src/pixel_range/: mod.rs  serde.rs
egui-pixels/src/tool/: clear.rs  mod.rs  pan.rs  rect.rs  rect_selection.rs
egui-pixels/tests/: deserialize_mask_settings.rs
egui_pixels/: Cargo.toml
egui_pixels/src/: lib.rs
egui_pixels/src/app/: config.rs  mod.rs  native.rs  viewer.rs  web.rs
egui_pixels/src/app/tools/: clear.rs
egui_pixels/src/app/tools/sam/: inference.rs  mod.rs
egui_pixels/src/mask/: flat_map_inplace.rs  mod.rs
imanot/: Cargo.toml
imanot/src/: async_task.rs  image_utils.rs  lib.rs  mask.rs  pixel_range.rs  tool.rs  tools.rs  viewer.rs
imanot/src/image_utils/: image.rs
imanot/src/mask/: history.rs  random_color.rs
imanot/src/tool/: clear.rs  pan.rs  rect.rs  rect_selection.rs
imanot/tests/: deserialize_mask_settings.rs
src/: app.rs  async_task.rs  history.rs  image_selector.rs  image_utils.rs  inference.rs  lib.rs  main.rs  mask_generator.rs  storage.rs  url_state.rs  viewer.rs
src/app/: image_selector.rs  menu.rs  mod.rs  native.rs
src/app/tools/: clear.rs  mod.rs  sam.rs
src/app/tools/sam/: native_ort.rs
src/inference/: mod.rs  native_ort.rs
src/mask/: flat_map_inplace.rs  history.rs  mod.rs
src/storage/: file.rs  in_memory.rs  mod.rs
