[workspace]
resolver = "3"
members = [ 
    "annotation-tool",
    "egui-pixels",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "wgpu",
    "default_fonts",
] }
egui = "0.31"
futures-core = "0.3"
futures-task = "0.3"
image = { version = "0.25", default-features = false }
itertools = "0.14.0"
log = "0.4.22"