[workspace]
resolver = "3"
members = ["annotation-tool", "egui-pixels"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
eframe = { version = "0.33", default-features = false, features = ["wgpu", "default_fonts"] }
egui = { version = "0.33", default-features = false }
futures-core = "0.3"
image = { version = "0.25", default-features = false }
imbuf = { git = "https://github.com/mineichen/imbuf" }
itertools = "0.14.0"
log = "0.4.22"
serde = { version = "1" }
