[package]
name = "annotation-tool"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "annotation-tool-app"
path = "src/main.rs"

[dependencies]
eframe = { workspace = true, features = ["glow"] }
egui-pixels = { path = "../egui-pixels" }
egui.workspace = true
emath = { version = "0.32.0", features = ["serde"] }
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
image = { workspace = true, features = [
    "png",
    "jpeg",
    "tiff",
] }
log.workspace = true
thiserror = "2"

ort = { version = "1.15.2", optional = true}
ndarray = { version = "0.15", optional = true }
rolling-stats = "0.7"
itertools.workspace = true
futures = "0.3"
bytemuck = "1.23"
brotli = "8.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["wayland", "sam"]
wayland = ["eframe/wayland"]
x11 = ["eframe/x11"]
sam = ["ort", "ndarray"]

#[patch.crates-io]
#egui = { path = "../myegui/crates/egui" }
#egui-winit = { path = "../myegui/crates/egui-winit" }
#eframe = { path = "../myegui/crates/eframe" }
