[package]
name = "annotation-tool"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "annotation-tool-app"
path = "src/main.rs"

[dependencies]
bytemuck = "1.23"
brotli = "8.0.0"
eframe = { version = "0.33", features = [
    "default_fonts",
] }
imanot = { path = "../imanot", features = ["image-0_25"] }
egui.workspace = true
emath = { version = "0.33", features = ["serde"] }
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
futures = "0.3"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "tiff",
] }
imask.workspace = true
imbuf.workspace = true
itertools.workspace = true
log.workspace = true
ndarray = { version = "0.15", optional = true }
ort = { version = "1.16.3", optional = true }
rolling-stats = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"


[features]
default = ["wayland", "sam"]
wayland = ["eframe/wayland"]
x11 = ["eframe/x11"]
sam = ["ort", "ndarray"]

#[patch.crates-io]
#egui = { path = "../myegui/crates/egui" }
#egui-winit = { path = "../myegui/crates/egui-winit" }
#eframe = { path = "../myegui/crates/eframe" }
