[package]
name = "egui-pixels"
version.workspace = true
edition.workspace = true
description = "Image viewer with zoom, pan and pixel selection tools"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui.workspace = true
image = { workspace = true, optional = true }
imbuf.workspace = true
itertools.workspace = true
log.workspace = true
num-traits = "0.2.19"
futures = "0.3"

serde = { workspace = true, features = ["derive"], optional = true }
eframe = { workspace = true, optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
thiserror = "2.0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
] }

[features]
default = []
image = ["dep:image"]
ffi = [
    "eframe",
    "js-sys",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "web-sys/Document",
    "web-sys/Window",
    "getrandom",
    "console_error_panic_hook",
]

[dev-dependencies]
serde_json = "1.0.145"
egui-pixels = { path = ".", features = ["serde"] }
