[package]
name = "egui-pixels"
version.workspace = true
edition.workspace = true
description = "Image viewer with zoom, pan and pixel selection tools"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui.workspace = true
image = { workspace = true, optional = true }
imbuf.workspace = true
itertools.workspace = true
log.workspace = true
num-traits = "0.2.19"
futures = "0.3"
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = "2.0.17"
imagemask.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
] }

[features]
default = []
image = ["dep:image"]

[dev-dependencies]
serde_json = "1.0.145"
egui-pixels = { path = ".", features = ["serde"] }
